--- a/Views/Admin/adminOrders.ejs
+++ b/Views/Admin/adminOrders.ejs
@@ -32,6 +32,7 @@
             </div>
         </div>
         <nav>
+            <div style="height: 645px;">
             <ul class="menu-aside">
                 <li class="menu-item">
                     <a class="menu-link " href="/admin/adminDashboard"> <i class="icon material-icons md-home"></i>
@@ -43,7 +44,7 @@
                             <span class="text">Products</span>
                         </a>
                         <div class="submenu">
-                            <a href="/admin/products">Add product</a>
+                            <a href="/admin/products">Product</a>
                             <a href="/admin/productList">List product</a>
                         </div>
                     </a>
@@ -55,57 +56,50 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <li class="menu-item">
-                        <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
-                            <span class="text">User</span></a>
-                    </li>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminTransactions"> <i class="icon material-icons md-monetization_on"></i>
-                        <span class="text">Transactions</span>
-                    </a>
-                </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-add_circle"></i>
-                        <span class="text">ADD</span>
-                    </a>
-                    <div class="submenu">
-                        <a href="/admin/adminAddProduct">Add product</a>
-                        <a href="/admin/getAdminCategories">Add Categories</a>
-                        <a href="/admin/adminAddCoupon">Add Coupon</a>
-                        <a href="/admin/adminAddBanner">Add Banner</a>
-                    </div>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminBrands"> <i class="icon material-icons md-grade"></i>
-                        <span class="text">Brand</span> </a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminReviews"> <i class="icon material-icons md-comment"></i>
-                        <span class="text">Reviews</span>
+                    <a class="menu-link" href="/admin/adminReturnReq"> <i class="icon material-icons md-request_quote"></i>
+                        <span class="text">Return Request</span>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" disabled href="/admin/adminStatistics"> <i class="icon material-icons md-pie_chart"></i>
-                        <span class="text">Statistics</span>
+                    <a class="menu-link" href="/admin/adminBanner"> <i class="icon material-icons md-ad_units"></i>
+                        <span class="text">Banner</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminCoupon"> <i class="icon material-icons md-payments"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminOffers"> <i class="icon material-icons md-card_membership"></i>
+                        <span class="text">Offers</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/getAdminCategories"> <i class="icon material-icons md-category"></i>
+                        <span class="text">Categories</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
+                        <span class="text">User</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" disabled href="/admin/salesReport"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Sales report</span>
                     </a>
                 </li>
             </ul>
+            </div>
             <hr>
-            <ul class="menu-aside">
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/adminSettings"> <i class="icon material-icons md-settings"></i>
-                        <span class="text">Settings</span>
-                    </a>
-                </li>
-                <li class="menu-item disabled">
-                    <a class="menu-link" href="/admin/adminStarterPage"> <i class="icon material-icons md-local_offer"></i>
-                        <span class="text"> Starter page </span>
-                    </a>
-                </li>
-            </ul>
-            <br>
-            <br>
+                <ul class="menu-aside">
+                    <li class="menu-item">
+                        <a class="menu-link" href=""> <i class="icon material-icons md-settings"></i>
+                            <span class="text">Settings</span>
+                        </a>
+                    </li>
+                </ul>
         </nav>
     </aside>
     
