--- a/Views/Admin/adminDashboard.ejs
+++ b/Views/Admin/adminDashboard.ejs
@@ -24,7 +24,7 @@
                             <span class="text">Products</span>
                         </a>
                         <div class="submenu">
-                            <a href="/admin/products">Add product</a>
+                            <a href="/admin/products">Product</a>
                             <a href="/admin/productList">List product</a>
                         </div>
                     </a>
@@ -56,22 +56,15 @@
                     </a>
                 </li>
                 <li class="menu-item">
+                    <a class="menu-link" href="/admin/getAdminCategories"> <i class="icon material-icons md-category"></i>
+                        <span class="text">Categories</span>
+                    </a>
+                </li>
+                <li class="menu-item">
                     <li class="menu-item">
                         <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
                             <span class="text">User</span></a>
                     </li>
-                </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-add_circle"></i>
-                        <span class="text">ADD</span>
-                    </a>
-                    <div class="submenu">
-                        <a href="/admin/adminAddProduct">Add product</a>
-                        <a href="/admin/getAdminCategories">Add Categories</a>
-                        <a href="/admin/adminCoupon">Add Coupon</a>
-                        <a href="/admin/adminCoupon">Add Offers</a>
-                        <a href="/admin/adminAddBanner">Add Banner</a>
-                    </div>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link" disabled href="/admin/salesReport"> <i class="icon material-icons md-pie_chart"></i>
@@ -83,7 +76,7 @@
             <hr>
                 <ul class="menu-aside">
                     <li class="menu-item">
-                        <a class="menu-link" href="/admin/adminSettings"> <i class="icon material-icons md-settings"></i>
+                        <a class="menu-link" href=""> <i class="icon material-icons md-settings"></i>
                             <span class="text">Settings</span>
                         </a>
                     </li>
