--- a/Views/Admin/adminReturnReq.ejs
+++ b/Views/Admin/adminReturnReq.ejs
@@ -44,7 +44,7 @@
                             <span class="text">Products</span>
                         </a>
                         <div class="submenu">
-                            <a href="/admin/products">Add product</a>
+                            <a href="/admin/products">Product</a>
                             <a href="/admin/productList">List product</a>
                         </div>
                     </a>
@@ -56,26 +56,34 @@
                     </a>
                 </li>
                 <li class="menu-item active">
-                    <a class="menu-link" href="/admin/adminReturnReq"> <i class="icon material-icons md-shopping_cart"></i>
+                    <a class="menu-link" href="/admin/adminReturnReq"> <i class="icon material-icons md-request_quote"></i>
                         <span class="text">Return Request</span>
                     </a>
                 </li>
                 <li class="menu-item">
-                    <li class="menu-item">
-                        <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
-                            <span class="text">User</span></a>
-                    </li>
-                </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="#"> <i class="icon material-icons md-add_circle"></i>
-                        <span class="text">ADD</span>
+                    <a class="menu-link" href="/admin/adminBanner"> <i class="icon material-icons md-ad_units"></i>
+                        <span class="text">Banner</span>
                     </a>
-                    <div class="submenu">
-                        <a href="/admin/adminAddProduct">Add product</a>
-                        <a href="/admin/getAdminCategories">Add Categories</a>
-                        <a href="/admin/adminAddCoupon">Add Coupon</a>
-                        <a href="/admin/adminAddBanner">Add Banner</a>
-                    </div>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminCoupon"> <i class="icon material-icons md-payments"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminOffers"> <i class="icon material-icons md-card_membership"></i>
+                        <span class="text">Offers</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/getAdminCategories"> <i class="icon material-icons md-category"></i>
+                        <span class="text">Categories</span>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/adminUser"> <i class="icon material-icons md-account_circle"></i>
+                        <span class="text">User</span>
+                    </a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link" disabled href="/admin/salesReport"> <i class="icon material-icons md-pie_chart"></i>
@@ -87,7 +95,7 @@
             <hr>
                 <ul class="menu-aside">
                     <li class="menu-item">
-                        <a class="menu-link" href="/admin/adminSettings"> <i class="icon material-icons md-settings"></i>
+                        <a class="menu-link" href=""> <i class="icon material-icons md-settings"></i>
                             <span class="text">Settings</span>
                         </a>
                     </li>
