--- a/Views/Admin/adminOffers.ejs
+++ b/Views/Admin/adminOffers.ejs
@@ -162,7 +162,7 @@
 
                         <div class="col-md-8">
                             <div class="table-responsive">
-                                <table class="table table-hover" style="width: 700px;">
+                                <table class="table table-hover" style="width: 700px;" id="offer">
                                     <thead>
                                         <tr>
                                             <th>Offer Name</th>
@@ -444,6 +444,16 @@
         })
     })
 
+</script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+<script>
+    $(document).ready(function () {
+        new DataTable('#offer');
+    });
 </script>
 
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-backend/page-categories.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:33:21 GMT -->
