--- a/Views/Admin/adminOrders.ejs
+++ b/Views/Admin/adminOrders.ejs
@@ -232,9 +232,7 @@
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
     <script>
         $(document).ready(function () {
-            new DataTable('#order', {
-                order: [[0, 'desc']] 
-            });
+            new DataTable('#order');
         });
     </script>
     
